# unsafer

./: Cargo.toml  LICENSE  README.md
src/: assume.rs  lib.rs  pointers.rs  shared_box.rs
tests/: tests.rs
